--- a/WebGL/Old/index.html
+++ b/WebGL/Old/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="ko">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | TM</title>
+    <title>TM</title>
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
-    <canvas id="unity-canvas" width=750 height=1334 tabindex="-1" style="width: 750px; height: 1334px; background: #231F20"></canvas>
+    <canvas id="unity-canvas" width=538 height=934 tabindex="-1" style="width: 538px; height: 934px; background: #231F20"></canvas>
     <script src="Build/WebGL.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
